--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,56 +1,94 @@
-name: Publish AOT Release
+name: Publish Native AOT for Linux and Windows
 
 on: [workflow_dispatch]
 
 permissions:
-  contents: write  # Needed to create a GitHub Release
+  contents: write  # Needed for GitHub Release
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  # build-linux:
+  #   name: Build for Linux
+  #   runs-on: ubuntu-latest
 
-    env:
-      DOTNET_EnablePreviewFeatures: true
+  #   steps:
+  #     - uses: actions/checkout@v4
+
+  #     - uses: actions/setup-dotnet@v4
+  #       with:
+  #         dotnet-version: '8.0.x'
+
+  #     - run: dotnet restore
+
+  #     - run: |
+  #         dotnet publish ToolManager.csproj \
+  #           -c Release \
+  #           -p:PublishAot=true \
+  #           -p:PublishSingleFile=true \
+  #           -p:SelfContained=true \
+  #           -r linux-x64 \
+  #           -o publish/linux-x64
+
+  #     - run: |
+  #         cd publish/linux-x64
+  #         zip -r ../../ToolManager-linux-x64.zip .
+  #         cd ../../
+
+  #     - name: Upload Linux artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: ToolManager-linux-x64
+  #         path: ToolManager-linux-x64.zip
+
+  build-windows:
+    name: Build for Windows
+    runs-on: windows-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: '8.0.x'
 
-      - name: Restore dependencies
-        run: dotnet restore
+      - run: dotnet restore
 
-      # - name: Publish AOT - Linux
-      #   run: |
-      #     dotnet publish ToolManager/ToolManager.csproj \
-      #       -c Release \
-      #       -p:PublishAot=true \
-      #       -p:PublishSingleFile=true \
-      #       -p:SelfContained=true \
-      #       -r linux-x64 \
-      #       -o publish/linux-x64
+      - run: |
+          dotnet publish ToolManager/ToolManager.csproj `
+            -c Release `
+            -p:PublishAot=true `
+            -p:PublishSingleFile=true `
+            -p:SelfContained=true `
+            -r win-x64 `
+            -o publish\win-x64
 
-      - name: Publish AOT - Windows
-        run: |
-          dotnet publish ToolManager/ToolManager.csproj \
-            -c Release \
-            -p:PublishAot=true \
-            -p:PublishSingleFile=true \
-            -p:SelfContained=true \
-            -r win-x64 \
-            -o publish/win-x64
+      - run: |
+          cd publish\win-x64
+          Compress-Archive -Path * -DestinationPath ..\..\ToolManager-win-x64.zip
+          cd ..\..\
 
-      - name: Zip publish outputs
-        run: |
-          # cd publish/linux-x64
-          # zip -r ../../ToolManager-linux-x64.zip .
-          cd ../../publish/win-x64
-          zip -r ../../ToolManager-win-x64.zip .
-          cd ../../
+      - name: Upload Windows artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ToolManager-win-x64
+          path: ToolManager-win-x64.zip
+
+  release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs:
+      - build-linux
+      - build-windows
+
+    steps:
+      # - name: Download Linux artifact
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: ToolManager-linux-x64
+
+      - name: Download Windows artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ToolManager-win-x64
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -60,3 +98,4 @@ jobs:
             ToolManager-win-x64.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
