--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - run: dotnet restore
 
       - run: |
-          dotnet publish ToolManager.csproj \
+          dotnet publish ToolManager/ToolManager.csproj \
             -c Release \
             -p:PublishAot=true \
             -p:PublishSingleFile=true \
