--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,3 +101,12 @@ jobs:
             --push \
             -t $IMAGE_NAME \
             docker-build
+
+      - name: Make Docker image public
+        run: |
+          curl \
+          -X PATCH \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          https://api.github.com/user/packages/container/toolmanager/visibility \
+          -d '{"visibility":"public"}'
