--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "MyHttpEndpoint": {
+        "Url": "https://localhost:443"
+      }
+    }
+  },
   "ReverseProxy": {
     "Routes": {
       "route1": {
