--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
-      "MyHttpEndpoint": {
+      "Http": {
         "Url": "http://localhost:5000"
       }
     }
