--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:5000"
+        "Url": "http://*:5000"
       }
     }
   },
