--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -44,7 +44,7 @@
   ],
   "Apps": [
     {
-      "Name": "pdf",
+      "Name": "stirling-pdf",
       "Instance": "Primary",
       "Port": 5001
     },
