--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -16,15 +16,22 @@
   "ReverseProxy": {
     "Routes": {
       "route1": {
-        "ClusterId": "app1",
+        "ClusterId": "defaultCluster",
         "Match": {
           "Path": "{**catch-all}"
+        },
+        "AuthorizationPolicy": "AuthenticatedOnly"
+      },
+      "route2": {
+        "ClusterId": "defaultCluster",
+        "Match": {
+          "Path": "/"
         },
         "AuthorizationPolicy": "AuthenticatedOnly"
       }
     },
     "Clusters": {
-      "app1": {
+      "defaultCluster": {
         "Destinations": {
           "destination1": {
             "Address": "https://example.com/"
