--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -25,7 +25,7 @@
       "route2": {
         "ClusterId": "defaultCluster",
         "Match": {
-          "Path": "/"
+          "Path": "/index.html"
         },
         "AuthorizationPolicy": "AuthenticatedOnly"
       }
