--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -18,14 +18,7 @@
       "route1": {
         "ClusterId": "defaultCluster",
         "Match": {
-          "Path": "{**catch-all}"
-        },
-        "AuthorizationPolicy": "AuthenticatedOnly"
-      },
-      "route2": {
-        "ClusterId": "defaultCluster",
-        "Match": {
-          "Path": "/index.html"
+          "Path": "/{**catch-all}"
         },
         "AuthorizationPolicy": "AuthenticatedOnly"
       }
