--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -42,15 +42,22 @@
       "Password": "1"
     }
   ],
+  "Instance": 0,
+  "Instances": [
+    {
+      "Name": 1,
+      "Domain": "tool1-fhachqcqf6aabae7.westeurope-01.azurewebsites.net"
+    }
+  ],
   "Apps": [
     {
       "Name": "stirling-pdf",
-      "Instance": "Primary",
+      "Instance": 0,
       "Port": 5001
     },
     {
-      "Name": "rick-rolled",
-      "Instance": "Secondary01",
+      "Name": "rickroll",
+      "Instance": 1,
       "Port": 5002
     }
   ]
