--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -45,6 +45,10 @@
   "Instance": 0,
   "Instances": [
     {
+      "Name": 0,
+      "Domain": "tool0-a6aebshyb0eqhvd2.westeurope-01.azurewebsites.net"
+    },
+    {
       "Name": 1,
       "Domain": "tool1-fhachqcqf6aabae7.westeurope-01.azurewebsites.net"
     }
