--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -6,13 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://*:5000"
-      }
-    }
-  },
+  "urls": "https://*:5000",
   "ReverseProxy": {
     "Routes": {
       "route1": {
@@ -34,7 +28,18 @@
     }
   },
   "Authentication": {
-    "CookieDomain": ".westeurope-01.azurewebsites.net"
+    "CookieDomain": "https://tool0-a6aebshyb0eqhvd2.westeurope-01.azurewebsites.net",
+    "OAuth": {
+      "ClientId": "your-client-id",
+      "ClientSecret": "your-client-secret",
+      "AuthorizationEndpoint": "http://localhost:5000/oauth/authorize",
+      "TokenEndpoint": "http://localhost:5000/oauth/token"
+    }
+  },
+  "EntraID": {
+    "ClientId": "",
+    "TenantId": "",
+    "ClientSecret": ""
   },
   "Users": [
     {
