--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -39,7 +39,8 @@
   "EntraID": {
     "ClientId": "",
     "TenantId": "",
-    "ClientSecret": ""
+    "ClientSecret": "",
+    "RedirectUri": ""
   },
   "Users": [
     {
