--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "urls": "https://*:5000",
+  //"urls": "https://*:5000",
   "ReverseProxy": {
     "Routes": {
       "route1": {
