--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -66,9 +66,9 @@
       "Port": 5001
     },
     {
-      "Name": "rickroll",
+      "Name": "convertx",
       "Instance": 1,
-      "Port": 5002
+      "Port": 3000
     }
   ]
 }
