--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,17 +121,12 @@ jobs:
           # --- Generate the Dockerfile ---
           # Use Fedora as the base image
           cat > docker-build/Dockerfile <<EOF
-          FROM mcr.microsoft.com/dotnet/runtime-deps:9.0.6-azurelinux3.0-distroless
-
-
-          # FROM fedora:latest
+          FROM fedora:latest
           # Install common runtime dependencies for .NET Native AOT
           # libicu provides globalization support, openssl-libs provides crypto
-          # RUN dnf update -y && \
-          #     dnf install -y libicu openssl-libs && \
-          #    dnf clean all
-
-
+          RUN dnf update -y && \
+              dnf install -y libicu openssl-libs && \
+              dnf clean all
           WORKDIR /app
           COPY . .
           # Ensure the binary is executable
