--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -123,6 +123,7 @@ jobs:
           FROM mcr.microsoft.com/dotnet/runtime-deps:9.0.6-azurelinux3.0-distroless-extra
           WORKDIR /app
           COPY ToolManager .
+          COPY appsettings.json .
           ENTRYPOINT ["/app/ToolManager"]
           EOF
           # --- End of Dockerfile generation ---
