--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,7 +120,7 @@ jobs:
 
           # --- Generate the Dockerfile ---
           cat > docker-build/Dockerfile <<EOF
-          FROM mcr.microsoft.com/dotnet/runtime-deps:9.0.6-azurelinux3.0-distroless-extra
+          FROM mcr.microsoft.com/dotnet/runtime-deps:9.0-azurelinux3.0-distroless
           WORKDIR /app
           COPY ToolManager .
           COPY appsettings.json .
