--- a/ToolManager/appsettings.json
+++ b/ToolManager/appsettings.json
@@ -27,48 +27,15 @@
       }
     }
   },
-  "Authentication": {
-    "CookieDomain": "https://tool0-a6aebshyb0eqhvd2.westeurope-01.azurewebsites.net",
-    "OAuth": {
-      "ClientId": "your-client-id",
-      "ClientSecret": "your-client-secret",
-      "AuthorizationEndpoint": "http://localhost:5000/oauth/authorize",
-      "TokenEndpoint": "http://localhost:5000/oauth/token"
-    }
-  },
   "EntraID": {
-    "ClientId": "",
-    "TenantId": "",
-    "ClientSecret": "",
-    "RedirectUri": ""
+    "clientid": "",
+    "tenantid": "",
+    "clientsecret": "",
+    "redirecturi": ""
   },
-  "Users": [
+  "App": 
     {
-      "Username": "1",
-      "Password": "1"
+      "Name": "",
+      "Port": 0
     }
-  ],
-  "Instance": 0,
-  "Instances": [
-    {
-      "Name": 0,
-      "Domain": "tool0-a6aebshyb0eqhvd2.westeurope-01.azurewebsites.net"
-    },
-    {
-      "Name": 1,
-      "Domain": "tool1-fhachqcqf6aabae7.westeurope-01.azurewebsites.net"
-    }
-  ],
-  "Apps": [
-    {
-      "Name": "stirling-pdf",
-      "Instance": 0,
-      "Port": 5001
-    },
-    {
-      "Name": "convertx",
-      "Instance": 1,
-      "Port": 3000
-    }
-  ]
 }
