--- a/ToolManager/ToolManager.csproj
+++ b/ToolManager/ToolManager.csproj
@@ -11,11 +11,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.6" />
-		<PackageReference Include="OpenIddict.AspNetCore" Version="7.0.0-preview.4.25313.34" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.7" />
+		<PackageReference Include="OpenIddict.AspNetCore" Version="7.0.0" />
 		<PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
 		
-		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
 	</ItemGroup>
 
 </Project>
